--- a/package.json
+++ b/package.json
@@ -23,10 +23,11 @@
     "yarn": "^1.22.11"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "mocha": "^10.3.0"
   },
   "scripts": {
-    "test": "jest",
+    "test": "mocha utils/hello.craigen.mjs",
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
