--- a/example_app/package.json
+++ b/example_app/package.json
@@ -4,8 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha",
+    "hello": "helloworld.js"
   },
+  "type": "module",
   "author": "",
   "license": "ISC",
   "dependencies": {
